# notrix-trax

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-template.md  feature_request.md  refactor.md
.github/workflows/: ci.yml  release.yml
.tmp-trax-example/: trax.db
docs/: Quickstart.md  spec-adapter.md  spec-diff-detect.md  spec-graph.md  spec-normalizer.md  spec-replay.md  system-spec.md  terminology.md
examples/: basic_capture.py  hero_diff_replay.py  langgraph_basic.py
examples/agent-example/: README.md  app.py
examples/agent_loop/: README.md  app.py
examples/rag-example/: README.md  app.py
examples/rag_failure/: README.md  app.py
tests/: test_adapters_openai.py  test_adapters_otel.py  test_adapters_retrieval.py  test_capture.py  test_capture_surfaces.py  test_cli.py  test_cli_help.py  test_cli_theme.py  test_cli_verdicts.py  test_collector.py  test_detect.py  test_diff.py  test_enums.py  test_examples.py  test_explain.py  test_graph.py  test_graph_export.py  test_inspect.py  test_langgraph_adapter.py  test_normalize.py  test_packaging.py  test_replay.py
trax/: __init__.py  config.py
trax/adapters/: __init__.py  openai.py  otel.py  retrieval.py
trax/cli/: __init__.py  formatters.py  main.py  theme.py
trax/collector/: __init__.py  events.py
trax/detect/: __init__.py  engine.py  rules.py
trax/diff/: __init__.py  engine.py  matcher.py  models.py
trax/explain/: __init__.py  diagnosis.py  engine.py  models.py  playbooks.py  ranker.py
(+24 files in other folders)
