[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "notrix-trax"
version = "0.1.0"
description = "Local-first AI debugging foundation for Trax."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Notrix" }
]
dependencies = []

[project.scripts]
trax = "trax.cli.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["trax*"]
